tests-integration/fixtures/checking/1772567700_givens_scoped/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
consume :: forall (@a :: Type). Given (a :: Type) => (a :: Type) -> (a :: Type)
testGiven :: forall (a :: Type). Given (a :: Type) => (a :: Type) -> (a :: Type)

Types
Given :: Type -> Constraint

Classes
class forall (a :: Type). Given (a :: Type)
  consume :: forall (@a :: Type). Given (a :: Type) => (a :: Type) -> (a :: Type)

Diagnostics
error[NoInstanceFound]: No instance found for: Given Int
	given
	Given (a :: Type)
  --> 6:1..6:41
  |
6 | testGiven :: forall a. Given a => a -> a
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
